# iot-fleet-tracker

./: .gitignore  README.md
iot-truck-agent/: Cargo copy.toml  Cargo.toml  tech.md
iot-truck-agent/config/: agent.toml
iot-truck-agent/src/: config.rs  error.rs  lib.rs  main.rs  telemetry.rs
iot-truck-agent/src/alert/: error.rs  mod.rs  types.rs
iot-truck-agent/src/alert/actuator/: canbus.rs  display.rs  gpio.rs  mod.rs  relay.rs
iot-truck-agent/src/alert/policy/: debounce.rs  escalation.rs
iot-truck-agent/src/alert/triger/: health.rs  ml.rs  mod.rs  sensor.rs
iot-truck-agent/src/camera/: encoder.rs  mod.rs  trigger.rs  types.rs  v4l2.rs
iot-truck-agent/src/health/: adaptive_controller.rs  alert.rs  alert_manager.rs  config.rs  disk_pressure.rs  error.rs  mod.rs  monitor.rs  network_monitor.rs  snapshot.rs  supervisor.rs  system_monitor.rs  task_supervisor.rs  thermal_manager.rs  types.rs
iot-truck-agent/src/ml_edge/: engine.rs  error.rs  fusion.rs  mod.rs  model_manager.rs  models.rs  postprocess.rs  preprocess.rs  scheduler.rs  types.rs
iot-truck-agent/src/ml_edge/engine/: tract_engine.rs
iot-truck-agent/src/ota/: command_executor.rs  config_manager.rs  error.rs  health_reporter.rs  mod.rs  rollback.rs  types.rs
iot-truck-agent/src/ota/updater/: apply.rs  download.rs  health_manager.rs  verify.rs
iot-truck-agent/src/sensors/: gps.rs  imu.rs  mod.rs  obd.rs  types.rs
iot-truck-agent/src/stream/: backpressure.rs  error.rs  mod.rs  types.rs
iot-truck-agent/src/stream/batcher/: mod.rs
iot-truck-agent/src/stream/compressor/: mod.rs
iot-truck-agent/src/stream/mqtt/: connection.rs  mod.rs
iot-truck-agent/src/supervisor/: error.rs  mod.rs  types.rs
iot-truck-agent/src/supervisor/lifecycle/: state.rs
iot-truck-agent/src/supervisor/panic/: mod.rs
iot-truck-agent/src/supervisor/shutdown/: sequence.rs  timeout.rs
iot-truck-agent/src/supervisor/signal/: handler.rs
iot-truck-agent/src/supervisor/watchdog/: health.rs  recovery.rs
iot-truck-agent/src/wal/: ack_manager.rs  checkpoint.rs  error.rs  health_integration.rs  mod.rs  reader.rs  types.rs  writer.rs
iot-truck-agent/src/wal/compactor/: mod.rs
iot-truck-agent/src/wal/reader/: mod.rs
iot-truck-agent/src/wal/retention/: mod.rs
iot-truck-agent/src/wal/writer/: buffer.rs  encryption.rs
truck-central-server/: Cargo.toml
truck-central-server/src/: config.rs  main.rs
truck-central-server/src/config/: server.toml
truck-central-server/src/models/: alert.rs  health.rs  ml.rs  ota.rs  telemetry.rs  truck.rs
truck-central-server/src/server/: mod.rs
truck-central-server/src/server/api/: mod.rs
truck-central-server/src/server/ingestion/: http.rs  kafka.rs  mod.rs  mqtt.rs  websocket.rs
truck-central-server/src/server/processing/: aggregation.rs  alerts.rs  enrichment.rs  ml.rs  mod.rs
truck-central-server/src/server/realtime/: mod.rs  pubsub.rs  websocket.rs
truck-central-server/src/server/storage/: blob.rs  cache.rs  document.rs  mod.rs  timeseries.rs
truck-central-server/src/services/: alert_service.rs  dashboard_service.rs  health_service.rs  ml_service.rs  ota_service.rs  telemetry_service.rs  truck_service.rs
truck-simulator/: Cargo.toml
truck-simulator/config/: simulator.toml
truck-simulator/src/: config.rs  main.rs  telemetry.rs
truck-simulator/src/simulator/: error.rs  mod.rs  types.rs
truck-simulator/src/simulator/protocol/: http.rs  mqtt.rs  websocket.rs
truck-simulator/src/simulator/scenario/: custom.rs  emergency.rs  failure.rs  mod.rs  normal.rs
truck-simulator/src/simulator/truck/: camera.rs  health.rs  ml.rs  mod.rs  ota.rs  sensor.rs
(+65 files in other folders)
