[package]
name = "iot-truck-agent"
version = "1.0.0"
edition = "2021"

[dependencies]
# Core
tokio = { version = "1.3", features = ["full", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# Config
config = "0.13"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

# Sensors
tokio-serial = "7.0"
nmea = "0.6"
linux-embedded-hal = "0.3"
embedded-hal = "1.0"
lis3dh = "0.7"
socketcan = { version = "2.0", features = ["tokio"] }

# Camera
v4l = "0.4"
v4l-sys = "0.3"
image = "0.24"
jpeg-encoder = "0.4"

# WAL
sled = "0.34"
bincode = "1.3"
zstd = "0.12"

# Streaming
rumqttc = "0.23"
reqwest = { version = "0.11", features = ["json", "http3", "stream"] }

# ML
tract-onnx = "0.21"
tract-core = "0.21"
ndarray = "0.15"

# Health
sysinfo = "0.29"
tokio-metrics = "0.4"
rppal = "0.14"

# OTA
sha2 = "0.10"
tempfile = "3.8"

# Alert
ssd1306 = "0.8"
embedded-graphics = "0.8"

# Supervisor
nix = "0.27"
backtrace = "0.3"
hostname = "0.3"

# Utils
thiserror = "1.0"
anyhow = "1.0"
parking_lot = "0.12"
once_cell = "1.19"
clap = { version = "4.4", features = ["derive"] }
async-trait = "0.1"
bytes = "1.5"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }