[package]
name = "truck-simulator"
version = "1.0.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.3", features = ["full", "macros"] }
futures-util = "0.3"

# MQTT
rumqttc = "0.23"
rumqttd = "0.23"

# HTTP
axum = "0.7"
tower-http = { version = "0.5", features = ["full"] }
serde_json = "1.0"

# WebSocket
tokio-tungstenite = "0.20"
warp = "0.3"

# Time + utils
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1.0"
anyhow = "1.0"
parking_lot = "0.12"
once_cell = "1.19"
clap = { version = "4.4", features = ["derive"] }

# Geographic
geo = "0.26"
geographiclib = "0.1"

# Image generation
image = "0.24"
toml = "0.8"